@@ -1,6 +1,7 @@
 #ifdef GEN_BUILTIN_TYPES
 struct mir_type *t_dummy_ptr;
 struct mir_type *t_placeholer;
+struct mir_type *t_inferred;
 struct mir_type *t_type;
 struct mir_type *t_scope;
 struct mir_type *t_s8;
