@@ -2,6 +2,7 @@
     BUILTIN_ID_NONE,
     BUILTIN_ID_TYPE_TYPE,
     BUILTIN_ID_TYPE_PLACEHOLDER,
+    BUILTIN_ID_TYPE_INFERRED,
     BUILTIN_ID_TYPE_NAMED_SCOPE,
     BUILTIN_ID_TYPE_S8,
     BUILTIN_ID_TYPE_S16,
@@ -76,6 +77,7 @@
     {.str.ptr = "<none>"                , .str.len = 6  },
     {.str.ptr = "type"                  , .str.len = 4  },
     {.str.ptr = ".placeholer"           , .str.len = 11 },
+    {.str.ptr = ".inferred"             , .str.len = 9  },
     {.str.ptr = "scope"                 , .str.len = 5  },
     {.str.ptr = "s8"                    , .str.len = 2  },
     {.str.ptr = "s16"                   , .str.len = 3  },
